feat(usuario): adicionar papeis ADMIN/OPERADOR e gestao de usuarios
Antes nao havia como criar logins alem do usuario semeado no startup, e
esse usuario nao recebia papel algum (getAuthorities retornava lista
vazia), entao nenhuma regra de autorizacao podia funcionar.

- Enum Role (ADMIN/OPERADOR) mapeado para autoridade ROLE_* em Usuario
- CRUD de usuarios em /api/usuarios, restrito a ADMIN
- /api/dashboard/** e /api/usuarios/** passam a exigir ROLE_ADMIN
- Login devolve o papel junto do token, para o frontend adaptar a
  navegacao sem precisar decodificar o JWT
- Seed de desenvolvimento agora cria o usuario com role ADMIN

Tambem inclui @EnableAsync na classe de aplicacao (usado pela geracao
assincrona de PDF, no commit seguinte) e generaliza a mensagem de
conflito 409, que citava apenas nome de produto e agora cobre tambem
codigo e login.

Nota: nao existe caminho de bootstrap de admin em producao — o seed roda
apenas nos perfis dev/default. Um banco de producao vazio exige inserir
o primeiro admin manualmente.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>